--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                                     </div>
                                     <form class="settings__form-wrap">
 										<div class="settings__form-group">
-											<span class="input-title">Имя конфига</span>
-											<input type="text" placeholder="Gl;,fdvgdfd">
+											<span class="input-title">Config name</span>
+											<input type="text" placeholder="">
 										</div>
                                         <div class="settings__form-group">
                                             <span class="input-title">Config name</span>
@@ -164,8 +164,8 @@
 											</div>
                                         </div>
 										<div class="settings__form-group">
-											<span class="input-title">Сумма транзакции</span>
-											<input type="text" placeholder="1000$">
+											<span class="input-title">Transaction amount</span>
+											<input type="text" placeholder="">
 										</div>
 										<div class="settings__form-group">
 											<span class="input-title">Transaction type</span>
