--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<div class="settings__title">Whale Crypto Alert</div>
 								<div class="settings__btn">
 									<img src="img/settings.svg" alt="">
-									<img src="img/settings2.svg" alt="">
+									<span><img src="img/settings2.svg" alt=""></span>
 								</div>
 							</div>
 							<div class="settings__search">
@@ -424,7 +424,9 @@
 
 	</div>
 
-	<div class="alert">Alert</div>
+	<div class="alert">
+		<span>Alert</span>
+	</div>
 
 	<script src="js/libs.min.js"></script>
 <script src="js/main.min.js"></script>
