--- a/index.html
+++ b/index.html
@@ -139,12 +139,14 @@
 											<input type="text" placeholder="">
 										</div>
                                         <div class="settings__form-group">
-                                            <span class="input-title">Config name</span>
+                                            <span class="input-title">Interval</span>
 											<div class="select__wrap">
-												<ul class="select__list-default">
+												<ul class="select__list-default select__list-default2">
 													<li class="select__current">
-														<span><img src="img/select-icon.svg" alt=""></span>
 														1 min
+													</li>
+													<li class="select__icon">
+														<span><img src="img/select-icon.svg" alt=""></span>
 													</li>
 													<li class="select-arrow">
 														<svg width="13" height="7" viewBox="0 0 13 7" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -299,9 +301,6 @@
 													</li>
 													<li>
 														30 min
-													</li>
-													<li>
-														Your interval
 													</li>
 												</ul>
 											</div>
