--- a/index.html
+++ b/index.html
@@ -457,8 +457,12 @@
 
 	</div>
 
-	<div class="alert">
-		<span>Alert</span>
+	<div class="alert-wrap">
+		<div class="alert">
+			<span>Alert</span>
+		</div>
+		<span class="round"></span>
+		<span class="round2"></span>
 	</div>
 
 	<script src="js/libs.min.js"></script>
